Upgrade Java from version 17 to 21
The build errors and warnings are also eliminated by various configurations in the pom.xml file.