@@ -14,7 +14,8 @@
 	<description>Demo project for Spring Boot with REST API</description>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
+		<mockito-core.version>5.14.0</mockito-core.version>
 	</properties>
 
 	<dependencies>
@@ -55,6 +56,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<!--
+		Mockito will be used for the unit tests, and it also hides the following warning during the build after
+		upgrading from Java version 17 to 21:
+			"Mockito is currently self-attaching to enable the inline-mock-maker. This will no longer work in future releases of the JDK. Please add Mockito as an agent to your build what is described in Mockito's documentation: https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html#0.3"
+		-->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito-core.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -74,7 +87,32 @@
 							"Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended"
 						-->
 						-Xshare:off
+						<!--
+						This JVM option eliminates the warning messages during the build after upgrading from Java
+						version 17 to 21 by explicitly loading Mockito as an agent at startup (instead of loading it
+						dynamically by default):
+							"WARNING: A Java agent has been loaded dynamically (C:\Users\hazazs\.m2\repository\net\bytebuddy\byte-buddy-agent\1.15.11\byte-buddy-agent-1.15.11.jar)
+							 WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+							 WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+							 WARNING: Dynamic loading of agents will be disallowed by default in a future release"
+						source: https://openjdk.org/jeps/451
+						-->
+						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito-core.version}/mockito-core-${mockito-core.version}.jar
 					</argLine>
+				</configuration>
+			</plugin>
+
+			<!--
+			Lombok requires annotation processing to generate boilerplate code (getters/setters, constructors, etc.) during compile time.
+			This configuration enables it explicitly.
+			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>-proc:full</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
